# StylusSync

./: .editorconfig  .gitignore  .pylintrc  CPPLINT.cfg  README.md  checkstyle.xml  protocol.md
.github/workflows/: app-build.yaml  app-tests.yaml
app-android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
app-android/app/: build.gradle  build.gradle.kts
app-android/app/src/androidTest/java/team/misakanet/stylussync/managers/: PermissionManagerIntegrationTest.java  PermissionManagerIntegrationTest.kt
app-android/app/src/androidTest/java/team/misakanet/stylussync/midi/: MidiClientIntegrationTest.java  MidiClientIntegrationTest.kt
app-android/app/src/main/: AndroidManifest.xml
app-android/app/src/main/java/team/misakanet/stylussync/: StylusSyncApplication.java  StylusSyncApplication.kt
app-android/app/src/main/res/drawable/: ic_launcher.xml  ic_settings.xml
app-android/app/src/main/res/layout/: activity_canvas.xml  activity_settings.xml
app-android/app/src/main/res/menu/: activity_canvas.xml
app-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app-android/app/src/main/res/values-night/: styles.xml
app-android/app/src/main/res/values-zh/: strings.xml
app-android/gradle/wrapper/: gradle-wrapper.properties
client/: __main__.py  main.py  pyproject.toml  requirements-linux.txt  requirements.txt
client/midi/: midi_receiver.py
client/platform/: virtual_device.py
client/platform/linux/: linux_virtual_device.py
client/platform/windows/: windows_virtual_device.py
client/utils/: data.py
(+36 files in other folders)
